258: fix alignment of icon + text link

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -22,6 +22,9 @@
   & > li {
     margin-bottom: 1rem;
   }
+  & .ncce-link {
+    display: inline-flex;
+  }
 }
 
 .ncce-footer__link--homepage {
